--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="8dp"
+        android:enabled="false"
         android:text="shutter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ListView1" />
@@ -106,14 +107,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="60dp"
-        android:text="Image"
+        android:text="画像取得"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ListView1" />
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
+        android:layout_width="395dp"
+        android:layout_height="318dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
