プレビュー画面追加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,7 @@
         android:layout_height="318dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:contextClickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_Status"
         tools:srcCompat="@tools:sample/avatars[0]" />
